2004/01/14 09:16 (-0500) rwmcfa1

	* t/GtkCurve.t: initial import, pretty much complete.

2004/01/14 08:07 (-0500) rwmcfa1

	* t/GtkTreeView.xs: apparently need to skip the tests needed events
	unless we're on newer than 2.2.x

2004/01/13 23:17 (-0500) muppetman

	* gtk-demo/textview.pl: use the PANGO_* constants from Gtk2::Pango
	instead of the rather obtuse Gtk2::Pango->* constants.

2004/01/13 23:14 (-0500) muppetman

	* gtk2perl.h: add newSVGdkBitmap_ornull.

2004/01/13 23:03 (-0500) rwmcfa1

	* xs/GtkTextIter.xs: _ornull's added to tag params for tag_toggle funcs
	found by Dan Lyke

2004/01/13 20:30 (-0500) rwmcfa1

	* t/GtkTreeView.xs: added tests for set_cursor_on_cell, scroll_to_point,
	get_path_at_pos, tree_to_widget_coords, and widget_to_tree_coords.

2004/01/12 23:45 (+0100) kaffeetisch

	* t/GtkDnd.t: Skip a few things if Gtk2::Gdk::Event::new isn't
	available.

2004/01/12 09:49 (-0500) rwmcfa1

	* pm/TestHelper.pm: if we're not 2.2.0 or greated don't allow init
	to be skipped. earlier rel's have to for some pagno thing.

	* t/GtkClipboard.t: the clipboard didn't exist for sure until 2.2.0

2004/01/11 23:59 (+0100) kaffeetisch

	* MANIFEST
	A t/GtkDnd.t: New test.

	* t/GtkTextIter.t: Test everything.

	* t/GdkRegion.t
	* t/GdkWindow.t
	* t/GtkAccelGroup.t
	* t/GtkAccelLabel.t
	* t/GtkAccelMap.t
	* t/GtkAdjustment.t
	* t/GtkAlignment.t
	* t/GtkArrow.t
	* t/GtkAspectFrame.t
	* t/GtkBin.t
	* t/GtkBox.t
	* t/GtkButtonBox.t
	* t/GtkCheckButton.t
	* t/GtkCheckMenuItem.t
	* t/GtkColorSelection.t
	* t/GtkColorSelectionDialog.t
	* t/GtkDrawingArea.t
	* t/GtkEntry.t
	* t/GtkEventBox.t
	* t/GtkFileSelection.t
	* t/GtkFixed.t
	* t/GtkFontSelection.t
	* t/GtkFrame.t
	* t/GtkHBox.t
	* t/GtkHButtonBox.t
	* t/GtkHPaned.t
	* t/GtkHRuler.t
	* t/GtkHScale.t
	* t/GtkHScrollbar.t
	* t/GtkHSeparator.t
	* t/GtkIconFactory.t
	* t/GtkImageMenuItem.t
	* t/GtkInputDialog.t
	* t/GtkInvisible.t
	* t/GtkLayout.t
	* t/GtkMenuBar.t
	* t/GtkMenuItem.t
	* t/GtkMenuShell.t